--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,5 +1,5 @@
 PKG_CXXFLAGS=$(C_VISIBILITY)
-PKG_CPPFLAGS=@cflags@ -DV8_ENABLE_CHECKS
+PKG_CPPFLAGS=@cflags@ -DV8_COMPRESS_POINTERS
 PKG_LIBS=@libs@
 CXX_STD=CXX11
 
