--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ cache: packages
 latex: false
 fortran: false
 
-r_check_args: '--no-manual'
-
 matrix:
   include:
     - r: 3.4
@@ -27,7 +25,8 @@ matrix:
         - brew link --force v8@3.15
     - os: osx
       disable_homebrew: true
-    - r:3.6
+      r_check_args: ""
+    - r: 3.6
       os: osx
       osx_image: xcode7.3
       disable_homebrew: true
